feat(sys): cache
